Looks like there was a bit of a misunderstanding about how either Kate Ranges, or just selections, actually work: the end of the selectionRange appears to be one space ahead of where I expected.  Fix earlier test, and add test for bug 309191, which was the motivating example for this.

BUG:309191